# store-aisle-monitor-cpp

./: CMakeLists.txt  README.md  main.cpp  setup.sh
application/src/: main.cpp
resources/: config.json
